--- a/css/components/carousel.css
+++ b/css/components/carousel.css
@@ -1,4 +1,7 @@
 /* COMMON STYLES */
+#carousel {
+    margin: 0;
+}
 .carousel-track {
     display: flex;
     transition: transform 0.6s ease-in-out;
