--- a/css/layout/right-panel.css
+++ b/css/layout/right-panel.css
@@ -29,11 +29,11 @@ h5 {
 }
 h6 {
     order: 1;
-    margin: 0 0 20px 5%;
+    margin-bottom: 20px;
     color: var(--accent-3);
 }
 #carousel h6 {
-    margin: 0 0 20px 10%;
+    margin-left: 10%;
 }
 article ol {
     order: 3;
