--- a/css/components/carousel.css
+++ b/css/components/carousel.css
@@ -2,6 +2,9 @@
 #carousel {
     margin: 30px 0 0 0;
 }
+#carousel img {
+    filter: var(--carousel-mask);
+}
 .carousel-track {
     display: flex;
     transition: transform 0.6s ease-in-out;
