--- a/css/layout/right-panel.css
+++ b/css/layout/right-panel.css
@@ -51,6 +51,9 @@ article ol {
         width: 80%;
         margin: 0 auto;
     }
+    #carousel h6 {
+        margin-left: 12%;
+    }
 }
 @media screen and (max-width: 360px) { /* PHONE */
     article {
