--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@
 @import url("components/modal.css");
 
 /* TRUMPS / UTILITIES / STATES */
+@import url("states/js-enabled.css");
 @import url("states/cookies.css");
 @import url("states/noscript.css");
 @import url("states/signature.css");
