--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -15,7 +15,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 28px;
+    /* height: 28px; */
 }
 #burger-icon-top,
 #burger-icon-middle,
@@ -46,7 +46,7 @@
     align-items: center;
     list-style: none;
     gap: 15px;
-    margin: 0;
+    /* margin: 0; */
     padding-left: 15px;
     transform: translateX(100%);
     transition: transform 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6);
