--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -5,8 +5,8 @@
     gap: 20px;
 }
 #burger-btn {
-    all: unset;
-    cursor: pointer;
+    /* all: unset;
+    cursor: pointer; */
     width: 30px;
     height: 30px;
 }
@@ -15,7 +15,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    /* height: 28px; */
+    height: 30px;
 }
 #burger-icon-top,
 #burger-icon-middle,
@@ -61,6 +61,7 @@
 /* FALLBACK MENU */
 #menu-fallback {
     position: absolute;
+    top: 15%;
     right: 2.5%;
     /* top: 50%; */
     /* transform: translateY(-50%); */
