--- a/css/states/active-js.css
+++ b/css/states/active-js.css
@@ -8,7 +8,8 @@
     display: block;
 }
 
-/* BURGER MENU EXCEPTION */
+/* EXCEPTIONS */
+#lang-menu.js-enabled,
 #burger-nav.js-enabled {
     display: flex;
 }
