--- a/css/layout/nav.css
+++ b/css/layout/nav.css
@@ -1,6 +1,6 @@
 /* MAIN MENU POSITION */
 nav {
-    display: block;
+    display: flex;
     position: fixed;
     top: 20px;
     left: 20px;
@@ -11,7 +11,7 @@ nav {
 /* LANG MENU */
 #lang-menu {
     flex-direction: column;
-    gap: 15px;
+    gap: 20px;
 }
 #lang-menu button {
     border-radius: 50%;
@@ -23,5 +23,5 @@ nav {
 #lang-fallback {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 20px;
 }
