--- a/css/layout/nav.css
+++ b/css/layout/nav.css
@@ -1,6 +1,7 @@
 /* MAIN MENU POSITION */
 nav {
     display: flex;
+    flex-direction: column;
     position: fixed;
     top: 20px;
     left: 20px;
