--- a/css/components/theme-dark.css
+++ b/css/components/theme-dark.css
@@ -6,8 +6,8 @@
     height: 40px;
     transition: transform 0.3s ease;
 }
-#theme-dark-btn:active {
-    transform: scale(0.9);
+#theme-dark-btn:hover {
+    transform: scale(1.1);
 }
 
 /* DARK MODE FALLBACK */
