--- a/css/layout/nav.css
+++ b/css/layout/nav.css
@@ -18,6 +18,11 @@ nav {
     border-radius: 50%;
     width: 40px;
     height: 40px;
+    overflow: hidden;
+    transition: transform 0.3s ease;
+}
+#lang-menu button:hover {
+    transform: scale(1.1);
 }
 
 /* LANG MENU FALLBACK */
