--- a/css/utils/icons-scale.css
+++ b/css/utils/icons-scale.css
@@ -1,7 +1,10 @@
+/* PROPORTIONAL SCALE */
 .scale-icons {
     transform: scale(1);
     transition: transform 0.3s ease;
 }
+
+/* HOVER SCALE */
 .scale-icons:hover {
     transform: scale(1.2);
 }
