--- a/css/utils/icons-color.css
+++ b/css/utils/icons-color.css
@@ -2,6 +2,9 @@
 .accent-1-svg {
     color: var(--accent-1);
 }
+#modal-close.accent-1-svg {
+    fill: var(--accent-1);
+}
 
 /* RIGHT-PANEL & BOTTOM-CONTAINER*/
 .accent-2-svg {
