--- a/css/utils/icons.css
+++ b/css/utils/icons.css
@@ -1,16 +1,16 @@
 /* GLOBAL STYLES */
-.scale-icons { /* INITIAL SCALE */
+.icons-scale { /* INITIAL SCALE */
     transform: scale(1);
     transition: transform 0.3s ease;
 }
-.scale-icons:hover { /* HOVER SCALE */
+.icons-scale:hover { /* HOVER SCALE */
     transform: scale(1.2);
 }
 
 /* SPECIFIC COLORS */
-.accent-1-svg { /* LEFT-PANEL & MODAL */
+.icons-color-1 { /* LEFT-PANEL & MODAL */
     color: var(--accent-1);
 }
-.accent-2-svg { /* RIGHT-PANEL & BOTTOM-CONTAINER*/
+.icons-color-2 { /* RIGHT-PANEL & BOTTOM-CONTAINER*/
     color: var(--accent-2);
 }
