--- a/css/utils/icons.css
+++ b/css/utils/icons.css
@@ -7,6 +7,14 @@
     transform: scale(1.2);
 }
 
+/* SPECIFIC SCALE */
+/* #burger-links-container.icons-scale {
+    transform: 
+}
+#burger-links-container.icons-scale:hover {
+    transform: scale(1.2);
+} */
+
 /* SPECIFIC COLORS */
 .icons-color-1 { /* LEFT-PANEL & MODAL */
     color: var(--accent-1);
