--- a/css/utils/icons.css
+++ b/css/utils/icons.css
@@ -9,7 +9,7 @@
 
 /* SPECIFIC SCALE */
 /* #burger-links-container.icons-scale {
-    transform: 
+    transform: height 
 }
 #burger-links-container.icons-scale:hover {
     transform: scale(1.2);
