--- a/css/utils/icons.css
+++ b/css/utils/icons.css
@@ -8,10 +8,7 @@
 }
 
 /* SPECIFIC SCALE */
-/* #burger-links-container.icons-scale {
-    transform: height 
-}
-#burger-links-container.icons-scale:hover {
+/* #burger-links-container:hover {
     transform: scale(1.2);
 } */
 
