--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -35,7 +35,7 @@
     transform: rotate(45deg) translate(-9px, -9px);
 }
 #burger-links-container {
-    width: 5%;
+    width: max-content;
     height: 40px;
     overflow: hidden;
 }
