--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -35,6 +35,9 @@
     transform: rotate(45deg) translate(-9px, -9px);
 }
 #burger-links-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: max-content;
     height: 40px;
     overflow: hidden;
