--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -46,7 +46,7 @@
     display: flex;
     align-items: center;
     gap: 15px;
-    padding-left: 15px;
+    padding: 0 15px;
     transform: translateX(100%);
     transition: transform 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 }
