--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -2,7 +2,7 @@
 #burger-nav {
     flex-direction: row-reverse;
     align-items: center;
-    gap: 20px;
+    /* gap: 20px; */
 }
 #burger-btn {
     width: 30px;
@@ -46,7 +46,7 @@
     display: flex;
     align-items: center;
     gap: 15px;
-    padding: 0 15px;
+    padding: 0 20px;
     transform: translateX(100%);
     transition: transform 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 }
@@ -64,7 +64,7 @@
     display: flex;
     align-items: center;
     list-style: none;
-    gap: 15px;
+    gap: 20px;
 }
 
 /* RESPONSIVE LAYOUT */
