--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -2,16 +2,15 @@
 #burger-nav {
     flex-direction: row-reverse;
     align-items: center;
-    /* gap: 20px; */
 }
 #burger-btn {
+    background-color: var(--accent-1);
     width: 30px;
     height: 30px;
 }
 #burger-icon {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-between;
     height: 30px;
 }
@@ -29,28 +28,18 @@
     width: 0;
 }
 #burger-btn[aria-expanded="true"] #burger-icon-top {
-    transform: rotate(-45deg) translate(-9px, 9px);
+    transform: rotate(-45deg) translate(-8px, 9px);
 }
 #burger-btn[aria-expanded="true"] #burger-icon-bottom {
-    transform: rotate(45deg) translate(-9px, -9px);
+    transform: rotate(45deg) translate(-8px, -9px);
 }
-#burger-links-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: max-content;
-    height: 40px;
-    overflow: hidden;
-}
-#burger-links {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-    padding: 0 20px;
+#github,
+#vercel {
     transform: translateX(100%);
     transition: transform 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 }
-#burger-links.active {
+#github.active,
+#vercel.active {
     transform: translateX(0);
 }
 
