--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -35,6 +35,7 @@
 }
 #github,
 #vercel {
+    top: 13%;
     transform: translateX(100%);
     transition: transform 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 }
