--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -28,17 +28,17 @@
     width: 0;
 }
 #burger-btn[aria-expanded="true"] #burger-icon-top {
-    transform: rotate(-45deg) translate(-8px, 9px);
+    transform: rotate(-45deg) translate(-9px, 9px);
 }
 #burger-btn[aria-expanded="true"] #burger-icon-bottom {
-    transform: rotate(45deg) translate(-8px, -9px);
+    transform: rotate(45deg) translate(-9px, -9px);
 }
 #burger-links {
     display: flex;
     flex-direction: row-reverse;
 }
-#github,
-#vercel {
+#github-icon,
+#vercel-icon {
     top: 13%;
     transform: translateX(100%);
     transition: transform 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6);
