--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -7,6 +7,7 @@
     background-color: var(--accent-1);
     width: 30px;
     height: 30px;
+    z-index: 998;
 }
 #burger-icon {
     display: flex;
@@ -36,16 +37,25 @@
 #burger-links {
     display: flex;
     flex-direction: row-reverse;
+    position: relative;
+    top: 13%;
 }
 #github-icon,
 #vercel-icon {
-    top: 13%;
+    position: absolute;
     transform: translateX(100%);
     transition: transform 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 }
 #github.active,
 #vercel.active {
     transform: translateX(0);
+}
+#github-icon {
+    z-index: 996;
+}
+#vercel-icon {
+    background-color: var(--accent-1);
+    z-index: 997;
 }
 
 /* FALLBACK MENU */
