--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -6,7 +6,6 @@
 #burger-btn {
     width: 30px;
     height: 30px;
-    z-index: 998;
 }
 #burger-icon {
     display: flex;
@@ -49,7 +48,7 @@
     opacity: 0;
     transition:
         transform 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6),
-        opacity 0.6s ease delay(0.2s);
+        opacity 0.6s ease 0.2s;
     overflow: visible;
 }
 #github-icon.active {
