--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -1,4 +1,8 @@
 /* JS HAMBURGER MENU */
+#burger-nav {
+    display: flex;
+    align-items: center;
+}
 #burger-btn {
     width: 30px;
     height: 30px;
@@ -48,11 +52,11 @@
     overflow: visible;
 }
 #github-icon.active {
-    transform: translateX(-120px);
+    transform: translateX(-130px);
     opacity: 1;
 }
 #vercel-icon.active {
-    transform: translateX(-80px);
+    transform: translateX(-90px);
     opacity: 1;
 }
 
