--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -3,7 +3,21 @@
     display: flex;
     align-items: center;
 }
+#burger-links {
+    position: relative;
+    top: 13%;
+    width: 0;
+    height: 30px;
+}
 #burger-btn {
+    z-index: 2;
+}
+#burger-btn,
+#github-icon,
+#vercel-icon {
+    position: absolute;
+    top: 0;
+    right: 0;
     width: 30px;
     height: 30px;
 }
@@ -32,19 +46,8 @@
 #burger-btn[aria-expanded="true"] #burger-icon-bottom {
     transform: rotate(45deg) translate(-9px, -9px);
 }
-#burger-links {
-    position: relative;
-    top: 13%;
-    width: 0;
-    height: 30px;
-}
 #github-icon,
 #vercel-icon {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 30px;
-    height: 30px;
     transform: translateX(0);
     opacity: 0;
     transition:
@@ -52,6 +55,7 @@
         opacity 0.6s ease;
     transition-delay: 0s, 0s;
     pointer-events: none;
+    z-index: 1;
 }
 #github-icon.active,
 #vercel-icon.active {
