--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -2,6 +2,8 @@
 #burger-nav {
     display: flex;
     align-items: center;
+    top: 13%;
+    right: 2.5%;
 }
 #burger-links {
     position: relative;
@@ -64,10 +66,10 @@
     pointer-events: auto;
 }
 #github-icon.active {
-    transform: translateX(-140px);
+    transform: translateX(-90px);
 }
 #vercel-icon.active {
-    transform: translateX(-90px);
+    transform: translateX(-50px);
 }
 
 /* FALLBACK MENU */
