--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -55,21 +55,21 @@
     transition:
         transform 0.6s cubic-bezier(0.68, -0.6, 0.32, 1.6),
         opacity 0.6s ease;
-    transition-delay: 0s, 0s;
+    /* transition-delay: 0s, 0s; */
     pointer-events: none;
     z-index: 1;
 }
 #github-icon.active,
 #vercel-icon.active {
     opacity: 1;
-    transition-delay: 0s, 0.2s;
+    /* transition-delay: 0s, 0.2s; */
     pointer-events: auto;
 }
 #github-icon.active {
-    transform: translateX(-120px);
+    transform: translateX(-110px);
 }
 #vercel-icon.active {
-    transform: translateX(-60px);
+    transform: translateX(-50px);
 }
 
 /* FALLBACK MENU */
