--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -1,14 +1,12 @@
 /* JS HAMBURGER MENU */
 #burger-nav {
-    /* display: flex; */
-    /* align-items: center; */
     top: 13%;
     right: 2.5%;
 }
 #burger-links {
     position: relative;
-    width: 0;
-    height: 30px;
+    /* width: 0;
+    height: 0; */
 }
 #burger-btn {
     z-index: 2;
@@ -79,7 +77,6 @@
 }
 #menu-fallback ul {
     display: flex;
-    /* align-items: center; */
     gap: 20px;
 }
 
