--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -5,8 +5,10 @@
 }
 #burger-links {
     position: relative;
-    width: 0;
-    height: 0;
+    top: 0;
+    right: 0;
+    /* width: 0;
+    height: 0; */
 }
 #burger-btn {
     z-index: 2;
