--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -7,8 +7,8 @@
     position: relative;
     top: 0;
     right: 0;
-    /* width: 0;
-    height: 0; */
+    width: 0;
+    height: 30px;
 }
 #burger-btn {
     z-index: 2;
