--- a/css/components/burguer.css
+++ b/css/components/burguer.css
@@ -4,6 +4,8 @@
     right: 2.5%;
 }
 #burger-links {
+    display: flex;
+    align-items: center;
     position: relative;
     top: 0;
     right: 0;
@@ -11,6 +13,9 @@
     height: 30px;
 }
 #burger-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     z-index: 2;
 }
 #burger-btn,
