Update CSS imports to use new URLs

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 @import url("base/variables.css");
 
 /* GENERIC */
-@import url("../app/open-utils/public/css/custom-reset.css");
+@import url("https://open-utils-dev-sandokan-cat.vercel.app/css/custom-reset.css");
 
 /* ELEMENTS */
 @import url("base/base.css");
@@ -29,4 +29,5 @@
 @import url("states/active-js.css");
 @import url("states/cookies.css");
 @import url("states/noscript.css");
+
 @import url("states/signature.css");
