--- a/partials/newsletter.xhtml
+++ b/partials/newsletter.xhtml
@@ -2,14 +2,14 @@
     "http://www.w3.org/WAI/ARIA/schemata/xhtml-aria-1.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es">
     <head>
-        <title>Gonzalo Cabezas - CV</title>
+        <title>sandokan.cat | Desarrollador Web Fullstack</title>
         <meta name="robots" content="noindex, nofollow"/>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	    <meta name="format-detection" content="telephone=yes"/>
+	    <meta name="format-detection" content="email=yes telephone=yes"/>
 	    <meta name="viewport" content="initial-scale=1, maximum-scale=1"/>
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <style type="text/css">
-            /* http://meyerweb.com/eric/tools/css/reset/
+                /* http://meyerweb.com/eric/tools/css/reset/
                 v2.0 | 20110126
                 License: none (public domain) */
                 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -99,11 +99,11 @@
                 <th colspan="3"><h1>Gonzalo Cabezas Núñez</h1></th>
             </tr>
             <tr>
-                <th colspan="3"><h2>ESTUDIANTE</h2></th>
+                <th colspan="3"><h2>Desarrollador Web Fullstack</h2></th>
             </tr>
             <tr>
                 <td><img src="img/spacer.gif" width="60" aria-hidden="true" alt=""/></td>
-                <td><p style="text-align: justify; margin-top: 50px;">Activo y dinámico. Implicado en las labores que se me asignan. Me considero resolutivo, capaz de soportar la presión y de colaborar en equipo. Sin miedo a los retos, adaptable al cambio, atento a los detalles, con dotes de liderazgo y con ganas de trabajar y demostrar mis aptitudes.</p></td>
+                <td><p style="text-align: justify; margin-top: 50px;">Me apasiona el código limpio y funcional. Me formo a diario, tanto en academias como por libre, porque el conocimiento no se acaba cuando suena el timbre. Me gusta romper cosas para entenderlas (y arreglarlas mejor), por eso el Red Team me llama fuerte. No sigo el camino estándar; prefiero trazar el mío con teclado y café. Busco proyectos donde pueda aprender, aportar y dejar huella, sin postureos ni promesas vacías. Si algo no lo sé, lo investigo. Y si algo me motiva, no paro hasta hacerlo bien.</p></td>
                 <td><img src="img/spacer.gif" width="60" aria-hidden="true" alt=""/></td>
             </tr>
             <tr>
@@ -185,7 +185,7 @@
                                     </g>
                                 </svg>
                             </td>
-                            <td><a href="https://suli92bcn.github.io/CV/" target="_blank">https://suli92bcn.github.io/CV/</a></td>
+                            <td><a href="https://sandokan.cat/" target="_blank">www.sandokan.cat/</a></td>
                         </tr>
                         <tr>
                             <td>
@@ -197,7 +197,7 @@
                                     <path fill="#c5221f" d="M52 51v8l20 15V48l-5.6-4.2c-5.94-4.45-14.4-.22-14.4 7.2"/>
                                 </svg>
                             </td>
-                            <td><a href="mailto:gonzalocn92@gmail.com">gonzalocn92@gmail.com</a></td>
+                            <td><a href="mailto:dev@sandokan.cat">dev@sandokan.cat</a></td>
                         </tr>
                         <tr>
                             <td>
@@ -215,7 +215,7 @@
                                     <path d="M257.561,131.836c-5.454-5.451-14.285-5.451-19.723,0L72.712,296.913c-2.607,2.606-4.085,6.164-4.085,9.877v120.401 c0,28.253,22.908,51.16,51.16,51.16h81.754v-126.61h92.299v126.61h81.755c28.251,0,51.159-22.907,51.159-51.159V306.79 c0-3.713-1.465-7.271-4.085-9.877L257.561,131.836z"/>
                                 </svg>
                             </td>
-                            <td><p style="margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; box-sizing: border-box;">Farell 12 entlo 3ª, 08014 Barcelona</p></td>
+                            <td><p style="margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; box-sizing: border-box;">08014 Barcelona</p></td>
                         </tr>
                     </table>
                 </td>
@@ -333,11 +333,11 @@
                 <td><img src="img/spacer.gif" width="60" aria-hidden="true" alt=""/></td>
             </tr>
             <tr>
-                <th colspan="3" style="background-color: #ffcc00;"><h4> Proyectos personales</h4></th>
+                <th colspan="3" style="background-color: #ffcc00;"><h4>Portfolio</h4></th>
             </tr>
             <tr>
                 <th colspan="3">
-                    <a href="https://github.com/suli92bcn?tab=repositories" target="_blank">
+                    <a href="https://github.com/sandokanCat" target="_blank">
                         <svg width="120" height="120" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                 <g id="Dribbble-Light-Preview" transform="translate(-140.000000, -7559.000000)" fill="white">
