--- a/css/base/base.css
+++ b/css/base/base.css
@@ -13,7 +13,7 @@ section {
     margin-bottom: 0;
 }
 article + article {
-    margin-top: 30px;
+    margin-top: 30px !important;
 }
 
 /* PROVISIONAL */
