--- a/css/layout/nav.css
+++ b/css/layout/nav.css
@@ -11,12 +11,13 @@ nav ul {
     align-items: center;
     gap: 20px;
 }
-nav a,
+#theme-dark-btn {
+    background-color: var(--accent-2);
+}
 nav button {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--accent-2);
     width: 40px;
     height: 40px;
     border-radius: 50%;
