--- a/css/layout/nav.css
+++ b/css/layout/nav.css
@@ -10,6 +10,7 @@ nav ul {
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    position: relative;
 }
 #theme-dark-btn {
     background-color: var(--accent-2);
@@ -23,4 +24,18 @@ nav button {
     border-radius: 50%;
     text-decoration: none;
     overflow: hidden;
+}
+nav button[data-lang] {
+    position: absolute;
+    top: 60px;
+    left: 0;
+    opacity: 0;
+    pointer-events: none;
+    transition: transform 0.6s ease, opacity 0.6s ease;
+}
+nav button[data-lang].active,
+nav button[data-lang].expanded,
+nav button[data-lang]:first-child {
+    opacity: 1;
+    pointer-events: auto;
 }
