--- a/css/utils/icons.css
+++ b/css/utils/icons.css
@@ -1,10 +1,31 @@
-/* GLOBAL STYLES */
-.icons-scale { /* INITIAL SCALE */
-    transform: scale(1);
-    transition: transform 0.3s ease;
+/* GLOBAL ICON SNIPPET */
+.icons-snippet { /* INITIAL STATE */
+    --scale: 1;
+    --translate-x: 0px;
+    --translate-y: 0px;
+    --rotate: 0deg;
+
+    will-change: opacity, transform;
+    opacity: 0;
+    transform:
+        scale(var(--scale))
+        translate(
+            var(--translate-x),
+            var(--translate-y))
+        rotate(var(--rotate));
+    transition:
+        opacity 0.5s ease,
+        transform 0.5s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+    pointer-events: none;
 }
-.icons-scale:hover { /* HOVER SCALE */
-    transform: scale(1.2);
+.icons-snippet:hover { /* HOVER STATE */
+    --scale: 1.2;
+}
+.icons-snippet.active,
+.icons-snippet.selected { /* ACTIVE STATE */
+    opacity: 1;
+    transition-delay: 0.2s, 0s;
+    pointer-events: auto;
 }
 
 /* SPECIFIC COLORS */
